adds header and section display-flex

--- a/index.html
+++ b/index.html
@@ -14,26 +14,25 @@
 
   <body>
     <header>
-      <nav class="nav-menu">
+      <nav class="nav-menu container">
         <a href="./index.html" class="header-logo"><span class="span-logo">Web</span>Studio</a>
-
         <ul class="nav-items">
-          <li>
+          <li class="item">
             <a href="/index.html" class="items is-active">Студия</a>
           </li>
-          <li>
+          <li class="item">
             <a href="./portfolio.html" class="items">Портфолио</a>
           </li>
-          <li>
+          <li class="item">
             <a href="" class="items">Контакты</a>
           </li>
         </ul>
 
         <ul class="nav-adress">
-          <li>
+          <li class="nav-adress-items">
             <a href="mailto:info@devstudio.com" class="adress-items">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="nav-adress-items">
             <a href="tel:+380961111111" class="adress-items">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -47,27 +46,27 @@
       </section>
       <section class="advantage-section">
         <h2>Наши преймущества</h2>
-        <ul>
-          <li>
-            <h3 class="advantage">Внимание к деталям</h3>
+        <ul class="advantage container">
+          <li class="advantage-items">
+            <h3 class="advantage-header">Внимание к деталям</h3>
             <p class="advantage-description">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
-          <li>
-            <h3 class="advantage">Пунктуальность</h3>
+          <li class="advantage-items">
+            <h3 class="advantage-header">Пунктуальность</h3>
             <p class="advantage-description">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
-            <h3 class="advantage">Планирование</h3>
+          <li class="advantage-items">
+            <h3 class="advantage-header">Планирование</h3>
             <p class="advantage-description">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3 class="advantage">Современные технологии</h3>
+          <li class="advantage-items">
+            <h3 class="advantage-header">Современные технологии</h3>
             <p class="advantage-description">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
@@ -75,14 +74,14 @@
         </ul>
       </section>
 
-      <section>
-        <h2 class="section-header">Чем мы занимаемся</h2>
+      <section class="work container">
+        <h2 class="work-section-header">Чем мы занимаемся</h2>
 
-        <ul>
-          <li>
+        <ul class="work-gallery">
+          <li class="work-items">
             <img src="./images/box-1.jpg" alt="Процесс написания кода" width="370" height="294" />
           </li>
-          <li>
+          <li class="work-items">
             <img
               src="./images/box-2.jpg"
               alt="в руках ноутбук и телефон"
@@ -90,7 +89,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="work-items">
             <img src="./images/box-3.jpg" alt="графический планшет" width="370" height="294" />
           </li>
         </ul>
