--- a/portfolio.html
+++ b/portfolio.html
@@ -13,27 +13,26 @@
   </head>
 
   <body>
-    <header>
+    <header class="container">
       <nav class="nav-menu">
         <a href="./index.html" class="header-logo"><span class="span-logo">Web</span>Studio</a>
-
         <ul class="nav-items">
-          <li>
+          <li class="item">
             <a href="./index.html" class="items">Студия</a>
           </li>
-          <li>
+          <li class="item">
             <a href="./portfolio.html" class="items is-active">Портфолио</a>
           </li>
-          <li>
+          <li class="item">
             <a href="" class="items">Контакты</a>
           </li>
         </ul>
 
         <ul class="nav-adress">
-          <li>
+          <li class="nav-adress-items">
             <a href="mailto:info@devstudio.com" class="adress-items">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="nav-adress-items">
             <a href="tel:+380961111111" class="adress-items">+38 096 111 11 11</a>
           </li>
         </ul>
