--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </header>
 
     <main>
-      <section class="main-section">
-        <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+      <section class="hero-section">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="buy-button">Заказать услугу</button>
       </section>
       <section class="advantage-section container">
@@ -75,69 +75,81 @@
         </ul>
       </section>
 
-      <section class="work container">
-        <h2 class="work-section-header">Чем мы занимаемся</h2>
+      <section class="work">
+        <div class="container">
+          <h2 class="work-section-header">Чем мы занимаемся</h2>
 
-        <ul class="work-gallery">
-          <li class="work-items">
-            <img src="./images/box-1.jpg" alt="Процесс написания кода" width="370" height="294" />
-          </li>
-          <li class="work-items">
-            <img
-              src="./images/box-2.jpg"
-              alt="в руках ноутбук и телефон"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="work-items">
-            <img src="./images/box-3.jpg" alt="графический планшет" width="370" height="294" />
-          </li>
-        </ul>
+          <ul class="work-gallery">
+            <li class="work-items">
+              <img src="./images/box-1.jpg" alt="Процесс написания кода" width="370" height="294" />
+            </li>
+            <li class="work-items">
+              <img
+                src="./images/box-2.jpg"
+                alt="в руках ноутбук и телефон"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-items">
+              <img src="./images/box-3.jpg" alt="графический планшет" width="370" height="294" />
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="team container">
-        <h2 class="section-header">Наша команда</h2>
-
-        <ul class="team-card">
-          <li class="cards">
-            <img src="./images/Igor.jpg" alt="Игорь" width="270" height="260" />
-            <h3 class="card-name">Игорь Демьяненко</h3>
-            <p class="card-description">Product Designer</p>
-          </li>
-          <li class="cards">
-            <img src="./images/Olga.jpg" alt="Михаил" width="270" height="260" />
-            <h3 class="card-name">Ольга Репина</h3>
-            <p class="card-description">Frontend Developer</p>
-          </li>
-          <li class="cards">
-            <img src="./images/Nikolai.jpg" alt="Николай" width="270" height="260" />
-            <h3 class="card-name">Николай Тарасов</h3>
-            <p class="card-description">Marketing</p>
-          </li>
-          <li class="cards">
-            <img src="./images/Mihail.jpg" alt="Михаил" width="270" height="260" />
-            <h3 class="card-name">Михаил Ермаков</h3>
-            <p class="card-description">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team">
+        <div class="container">
+          <h2 class="header-team">Наша команда</h2>
+          <ul class="team-card">
+            <li class="cards">
+              <img src="./images/Igor.jpg" alt="Игорь" width="270" height="260" />
+              <h3 class="card-name">Игорь Демьяненко</h3>
+              <p class="card-description">Product Designer</p>
+            </li>
+            <li class="cards">
+              <img src="./images/Olga.jpg" alt="Михаил" width="270" height="260" />
+              <h3 class="card-name">Ольга Репина</h3>
+              <p class="card-description">Frontend Developer</p>
+            </li>
+            <li class="cards">
+              <img src="./images/Nikolai.jpg" alt="Николай" width="270" height="260" />
+              <h3 class="card-name">Николай Тарасов</h3>
+              <p class="card-description">Marketing</p>
+            </li>
+            <li class="cards">
+              <img src="./images/Mihail.jpg" alt="Михаил" width="270" height="260" />
+              <h3 class="card-name">Михаил Ермаков</h3>
+              <p class="card-description">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-    <footer class="footer">
-      <a href="./index.html" class="footer-logo">Web<span class="span-footer-logo">Studio</span></a>
-
-      <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/jg8yxFYKUGYRBdv56" class="footer-adress"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li><a href="mailto:info@example.com" class="footer-contacts">info@example.com</a></li>
-          <li><a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+    <footer>
+      <section class="section-footer">
+        <div class="container">
+          <a href="./index.html" class="footer-logo"
+            >Web<span class="span-footer-logo">Studio</span></a
+          >
+          <address>
+            <ul class="footer-nav">
+              <li class="footer-items">
+                <a href="https://goo.gl/maps/jg8yxFYKUGYRBdv56" class="footer-adress"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-items">
+                <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
+              </li>
+              <li class="footer-items">
+                <a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
     </footer>
+          </section>
+            </div>
   </body>
 </html>
