--- a/portfolio.html
+++ b/portfolio.html
@@ -18,24 +18,25 @@
         <a href="./index.html" class="header-logo"><span class="span-logo">Web</span>Studio</a>
         <ul class="nav-items">
           <li class="item">
-            <a href="./index.html" class="items">Студия</a>
+            <a href="/index.html" class="items is-active">Студия</a>
           </li>
           <li class="item">
-            <a href="./portfolio.html" class="items is-active">Портфолио</a>
+            <a href="./portfolio.html" class="items">Портфолио</a>
           </li>
           <li class="item">
             <a href="" class="items">Контакты</a>
           </li>
         </ul>
-
-        <ul class="nav-adress">
-          <li class="nav-adress-items">
-            <a href="mailto:info@devstudio.com" class="adress-items">info@devstudio.com</a>
-          </li>
-          <li class="nav-adress-items">
-            <a href="tel:+380961111111" class="adress-items">+38 096 111 11 11</a>
-          </li>
-        </ul>
+        <div class="item">
+          <ul class="nav-adress">
+            <li class="nav-adress-items">
+              <a href="mailto:info@devstudio.com" class="adress-items">info@devstudio.com</a>
+            </li>
+            <li class="nav-adress-items">
+              <a href="tel:+380961111111" class="adress-items">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
 
@@ -63,7 +64,7 @@
                 height="294"
               />
               <h2 class="title-card">Технокряк</h2>
-              <p class="card-description">Веб-сайт</p>
+              <p class="card-descriptions">Веб-сайт</p>
             </a>
           </li>
 
@@ -76,7 +77,7 @@
                 height="294"
               />
               <h2 class="title-card">Постер New Orlean vs Golden Star</h2>
-              <p class="card-description">Дизайн</p>
+              <p class="card-descriptions">Дизайн</p>
             </a>
           </li>
 
@@ -89,7 +90,7 @@
                 height="294"
               />
               <h2 class="title-card">Ресторан Seafood</h2>
-              <p class="card-description">Приложение</p>
+              <p class="card-descriptions">Приложение</p>
             </a>
           </li>
           <li class="content-items">
@@ -101,7 +102,7 @@
                 height="294"
               />
               <h2 class="title-card">Проект Prime</h2>
-              <p class="card-description">Маркетинг</p>
+              <p class="card-descriptions">Маркетинг</p>
             </a>
           </li>
           <li class="content-items">
@@ -113,7 +114,7 @@
                 height="294"
               />
               <h2 class="title-card">Проект Boxes</h2>
-              <p class="card-description">Приложение</p>
+              <p class="card-descriptions">Приложение</p>
             </a>
           </li>
           <li class="content-items">
@@ -125,7 +126,7 @@
                 height="294"
               />
               <h2 class="title-card">Inspiration has no Borders</h2>
-              <p class="card-description">Веб-сайт</p>
+              <p class="card-descriptions">Веб-сайт</p>
             </a>
           </li>
 
@@ -138,7 +139,7 @@
                 height="294"
               />
               <h2 class="title-card">Издание Limited Edition</h2>
-              <p class="card-description">Дизайн</p>
+              <p class="card-descriptions">Дизайн</p>
             </a>
           </li>
           <li class="content-items">
@@ -150,7 +151,7 @@
                 height="294"
               />
               <h2 class="title-card">Проект LAB</h2>
-              <p class="card-description">Маркетинг</p>
+              <p class="card-descriptions">Маркетинг</p>
             </a>
           </li>
           <li class="content-items">
@@ -162,25 +163,36 @@
                 height="294"
               />
               <h2 class="title-card">Growing Business</h2>
-              <p class="card-description">Приложение</p>
+              <p class="card-descriptions">Приложение</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer class="footer">
-      <a href="./index.html" class="footer-logo">Web<span class="span-footer-logo">Studio</span></a>
-
-      <address>
-        <a href="https://goo.gl/maps/jg8yxFYKUGYRBdv56" class="footer-adress"
-          >г. Киев, пр-т Леси Украинки, 26</a
-        >
-        <ul>
-          <li><a href="mailto:info@example.com" class="footer-contacts">info@example.com</a></li>
-          <li><a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+ <footer>
+      <section class="section-footer">
+        <div class="container">
+          <a href="./index.html" class="footer-logo"
+            >Web<span class="span-footer-logo">Studio</span></a
+          >
+          <address>
+            <ul class="footer-nav">
+              <li class="footer-items">
+                <a href="https://goo.gl/maps/jg8yxFYKUGYRBdv56" class="footer-adress"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-items">
+                <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
+              </li>
+              <li class="footer-items">
+                <a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
     </footer>
+          </section>
+            </div>
   </body>
 </html>
