--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <button type="button" class="buy-button">Заказать услугу</button>
       </section>
       <section class="advantage-section container">
-        <h2>Наши преймущества</h2>
+        <h2 class="visualy-hidden">Наши преймущества</h2>
         <ul class="advantage container">
           <li class="advantage-items">
             <h3 class="advantage-header">Внимание к деталям</h3>
