--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
         <a href="./index.html" class="header-logo"><span class="span-logo">Web</span>Studio</a>
         <ul class="nav-items">
           <li class="item">
-            <a href="/index.html" class="items is-active">Студия</a>
+            <a href="/index.html" class="items">Студия</a>
           </li>
           <li class="item">
-            <a href="./portfolio.html" class="items">Портфолио</a>
+            <a href="./portfolio.html" class="items is-active">Портфолио</a>
           </li>
           <li class="item">
             <a href="" class="items">Контакты</a>
@@ -42,19 +42,20 @@
 
     <main>
       <section>
-        <h1>Наши проекты</h1>
+        <h1 class="visualy-hidden">Наши проекты</h1>
+<ul class="filter-list">
+            <li class="filter-item"><button type="button" class="filter-buttoms">Все</button></li>
 
-        <ul class="content">
-          <li><button type="button" class="menu-items">Все</button></li>
+          <li class="filter-item"><button type="button" class="filter-buttoms">Веб-сайты</button></li>
 
-          <li><button type="button" class="menu-items">Веб-сайты</button></li>
+          <li class="filter-item"><button type="button" class="filter-buttoms">Приложения</button></li>
 
-          <li><button type="button" class="menu-items">Приложения</button></li>
+          <li class="filter-item"><button type="button" class="filter-buttoms">Дизайн</button></li>
 
-          <li><button type="button" class="menu-items">Дизайн</button></li>
-
-          <li><button type="button" class="menu-items">Маркеинг</button></li>
-
+          <li class="filter-item"><button type="button" class="filter-buttoms">Маркеинг</button></li>
+</ul>
+<div class="container">
+        <ul class="content-list">
           <li class="content-items">
             <a href="">
               <img
@@ -63,8 +64,10 @@
                 width="370"
                 height="294"
               />
+              <div class="card-groop">
               <h2 class="title-card">Технокряк</h2>
               <p class="card-descriptions">Веб-сайт</p>
+              </div>
             </a>
           </li>
 
@@ -76,8 +79,10 @@
                 width="370"
                 height="294"
               />
+              <div class="card-groop">
               <h2 class="title-card">Постер New Orlean vs Golden Star</h2>
               <p class="card-descriptions">Дизайн</p>
+              </div>
             </a>
           </li>
 
@@ -89,8 +94,10 @@
                 width="370"
                 height="294"
               />
+              <div class="card-groop">
               <h2 class="title-card">Ресторан Seafood</h2>
               <p class="card-descriptions">Приложение</p>
+              </div>
             </a>
           </li>
           <li class="content-items">
@@ -101,8 +108,10 @@
                 width="370"
                 height="294"
               />
+               <div class="card-groop">
               <h2 class="title-card">Проект Prime</h2>
               <p class="card-descriptions">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="content-items">
@@ -113,8 +122,10 @@
                 width="370"
                 height="294"
               />
+             <div class="card-groop">
               <h2 class="title-card">Проект Boxes</h2>
               <p class="card-descriptions">Приложение</p>
+              </div>
             </a>
           </li>
           <li class="content-items">
@@ -125,8 +136,10 @@
                 width="370"
                 height="294"
               />
+              <div class="card-groop">
               <h2 class="title-card">Inspiration has no Borders</h2>
               <p class="card-descriptions">Веб-сайт</p>
+              </div>
             </a>
           </li>
 
@@ -138,8 +151,10 @@
                 width="370"
                 height="294"
               />
+<div class="card-groop">
               <h2 class="title-card">Издание Limited Edition</h2>
               <p class="card-descriptions">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="content-items">
@@ -150,8 +165,10 @@
                 width="370"
                 height="294"
               />
+<div class="card-groop">
               <h2 class="title-card">Проект LAB</h2>
               <p class="card-descriptions">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="content-items">
@@ -162,11 +179,14 @@
                 width="370"
                 height="294"
               />
+<div class="card-groop">
               <h2 class="title-card">Growing Business</h2>
               <p class="card-descriptions">Приложение</p>
+              </div>
             </a>
           </li>
         </ul>
+        </div>
       </section>
     </main>
 
