--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <header class="container">
+    <header class="nav-menu container">
       <nav class="nav-menu">
         <a href="./index.html" class="header-logo"><span class="span-logo">Web</span>Studio</a>
         <ul class="nav-items">
@@ -27,7 +27,7 @@
             <a href="" class="items">Контакты</a>
           </li>
         </ul>
-        <div class="item">
+      </nav>
           <ul class="nav-adress">
             <li class="nav-adress-items">
               <a href="mailto:info@devstudio.com" class="adress-items">info@devstudio.com</a>
@@ -36,8 +36,6 @@
               <a href="tel:+380961111111" class="adress-items">+38 096 111 11 11</a>
             </li>
           </ul>
-        </div>
-      </nav>
     </header>
 
     <main>
@@ -108,7 +106,7 @@
               <p class="card-description">Product Designer</p>
             </li>
             <li class="cards">
-              <img src="./images/Olga.jpg" alt="Михаил" width="270" height="260" />
+              <img src="./images/Olga.jpg" alt="Ольга" width="270" height="260" />
               <h3 class="card-name">Ольга Репина</h3>
               <p class="card-description">Frontend Developer</p>
             </li>
@@ -134,12 +132,13 @@
             >Web<span class="span-footer-logo">Studio</span></a
           >
           <address>
-            <ul class="footer-nav">
-              <li class="footer-items">
+               <p class="footer-items">
                 <a href="https://goo.gl/maps/jg8yxFYKUGYRBdv56" class="footer-adress"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
-              </li>
+              </p>
+
+            <ul class="footer-nav">
               <li class="footer-items">
                 <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
               </li>
@@ -147,6 +146,7 @@
                 <a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a>
               </li>
             </ul>
+
           </address>
     </footer>
           </section>
