--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <header class="container">
+ <header class="nav-menu container">
       <nav class="nav-menu">
         <a href="./index.html" class="header-logo"><span class="span-logo">Web</span>Studio</a>
         <ul class="nav-items">
@@ -27,7 +27,7 @@
             <a href="" class="items">Контакты</a>
           </li>
         </ul>
-        <div class="item">
+      </nav>
           <ul class="nav-adress">
             <li class="nav-adress-items">
               <a href="mailto:info@devstudio.com" class="adress-items">info@devstudio.com</a>
@@ -36,8 +36,6 @@
               <a href="tel:+380961111111" class="adress-items">+38 096 111 11 11</a>
             </li>
           </ul>
-        </div>
-      </nav>
     </header>
 
     <main>
@@ -53,7 +51,7 @@
 
           <li class="filter-item"><button type="button" class="filter-buttoms">Дизайн</button></li>
 
-          <li class="filter-item"><button type="button" class="filter-buttoms">Маркеинг</button></li>
+          <li class="filter-item"><button type="button" class="filter-buttoms">Маркетинг</button></li>
 </ul>
 
         <ul class="content-list">
@@ -191,19 +189,20 @@
       </section>
     </main>
 
- <footer>
+    <footer>
       <section class="section-footer">
         <div class="container">
           <a href="./index.html" class="footer-logo"
             >Web<span class="span-footer-logo">Studio</span></a
           >
           <address>
-            <ul class="footer-nav">
-              <li class="footer-items">
+               <p class="footer-items">
                 <a href="https://goo.gl/maps/jg8yxFYKUGYRBdv56" class="footer-adress"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
-              </li>
+              </p>
+
+            <ul class="footer-nav">
               <li class="footer-items">
                 <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
               </li>
@@ -211,6 +210,7 @@
                 <a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a>
               </li>
             </ul>
+
           </address>
     </footer>
           </section>
