fix container in header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </head>
 
   <body>
-    <header class="nav-menu container">
+    <div class="container">
+ <header class="nav-menu">
       <nav class="nav-menu">
         <a href="./index.html" class="header-logo"><span class="span-logo">Web</span>Studio</a>
         <ul class="nav-items">
@@ -21,7 +22,7 @@
             <a href="/index.html" class="items is-active">Студия</a>
           </li>
           <li class="item">
-            <a href="./portfolio.html" class="items">Портфолио</a>
+            <a href="./portfolio.html" class="items ">Портфолио</a>
           </li>
           <li class="item">
             <a href="" class="items">Контакты</a>
@@ -37,6 +38,7 @@
             </li>
           </ul>
     </header>
+    </div>
 
     <main>
       <section class="hero-section">
