--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,8 @@
   </head>
 
   <body>
- <header class="nav-menu container">
+    <div class="container">
+ <header class="nav-menu">
       <nav class="nav-menu">
         <a href="./index.html" class="header-logo"><span class="span-logo">Web</span>Studio</a>
         <ul class="nav-items">
@@ -37,6 +38,7 @@
             </li>
           </ul>
     </header>
+    </div>
 
     <main>
       <div class="container"> 
